# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [0.1.3] - 2021-04-26
### Fixed
- Issue where passwords containing a colon caused `AuthBasicError::InvalidAuthorizationHeader` (https://github.com/EstebanBorai/http-auth-basic/pull/3)

### Added
- Support for RFC 2617 spec (https://github.com/EstebanBorai/http-auth-basic/pull/3)

## [0.1.2] - 2020-09-16
### Added
- Build Badge
- Clippy and Fmt Badge
- Tests Badge

## [0.1.1] - 2020-09-15
### Added
- Badges to README
- Logo to README
- Usecase description

## [0.1.0] - 2020-08-30
### Added
- `Credentials` struct
- Capability to encode and decode
- Create `Credentials` instance from `Authorization` header value